# mdapy

./: pyproject.toml
