[project]
name = "ihc-mdapy"
version = "0.1.0"
description = "Maximum Dissimilarity Algorithm in Python"
readme = "README.md"
authors = [{ name = "Pablo Garcia" }, { email = "pablofueros@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.26", "scipy>=1.11.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["matplotlib>=3.8", "pytest>=7.0", "pytest-cov>=4.1"]

[project.urls]
Repository = "https://github.com/IHCantabria/mdapy"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ['src/mdapy']
